--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ textarea{
     border-radius: 10px;
     border: 1px solid yellow;
 }
-button{
+.for button{
     padding: 5px 15px;
     border-radius: 20px;
     margin: auto;
